unpackaged/main/default/objects/genesis__Application_Status_History__c/genesis__Application_Status_History__c.object-meta.xml
<CustomObject>
    <label>Application Status History</label>
    <nameField>
        <displayFormat>ASH-{00000000}</displayFormat>
        <label>Application Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>