unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Application Status History</relationshipLabel>
    <relationshipName>Application_Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>