unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__Changed_On__c.field-meta.xml
<CustomField>
    <fullName>genesis__Changed_On__c</fullName>
    <description>DateTime on which the application status is changed</description>
    <inlineHelpText>DateTime on which the application status is changed</inlineHelpText>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>