unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__Current_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>genesis__Current_Status_Duration__c</fullName>
    <description>If the application is being process, then how much time in minutes elapsed between NOW and the when the application status was changed, else this will be 0</description>
    <formula>IF( genesis__Is_Latest_Status__c ,ROUND( ( NOW() -  genesis__Changed_On__c ) * 24 , 2) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the application is being process, then how much time in minutes elapsed between NOW and the when the application status was changed, else this will be 0</inlineHelpText>
    <label>Current Status Duration(till now)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>