unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__Is_Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Latest_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the application is being processes and it is the most recent status change record, then its true else false. This value is set based on the values provided in Closed Status in Org Parameters.</description>
    <inlineHelpText>If the application is being processes and it is the most recent status change record, then its true else false. This value is set based on the values provided in Closed Status in Org Parameters.</inlineHelpText>
    <label>Is Latest Status</label>
    <type>Checkbox</type>
</CustomField>