unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__New_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__New_Value__c</fullName>
    <description>New Status of application</description>
    <inlineHelpText>New Status of application</inlineHelpText>
    <label>New Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>