unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/genesis__Old_value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Old_value__c</fullName>
    <description>Old Status of application</description>
    <inlineHelpText>Old Status of application</inlineHelpText>
    <label>Old Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>