unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/IsADCDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsADCDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsADCDeleted</label>
    <type>Checkbox</type>
</CustomField>