unpackaged/main/default/objects/genesis__Application_Status_History__c/fields/UpdatedByHMMW__c.field-meta.xml
<CustomField>
    <fullName>UpdatedByHMMW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LOS 215 to flag records updated by Happymoney</description>
    <label>UpdatedByHMMW</label>
    <type>Checkbox</type>
</CustomField>